dashboard service without server info
